add #commets in bot.py and files .gitignore and reviews.js for bd

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TG_BOT_TOKEN=8342780403:AAGSPM1z5cSxZP2ojGODSW_1NCco_ifZTtQ
-API_BASE_URL=http://127.0.0.1:8000
+API_BASE_URL=https://api.качественныезапчасти.рф
 BOT_API_KEY=super-secret-key
-WHITELIST_IDS=8592631983
+WHITELIST_IDS=8592631983, 8377504553, 7945403011
